--- a/quem-somos/index.html
+++ b/quem-somos/index.html
@@ -18,7 +18,7 @@ title: Quem Somos
 					<h2>Somos especializados em comércio <br>eletrônico, mobile  e cloud.”</h2>	
 				</div>
 				<div class="col-md-3 align-right">
-					<span><img class=" " src="/img/team.png" alt="Team CS"></span>
+					<span><img class="" src="/img/team.png" alt="Team CS"></span>
 				</div>
 			</div>
 			<div class="about">
@@ -122,7 +122,7 @@ title: Quem Somos
 		    	</li>
 		    	
 		    	<li>
-		    		<a class="tooltip-1" data-toggle="popover" data-placement="bottom" data-content="Na Concrete Solutions desde 2006, é a gerente da área de suporte enquanto atua como CEO da FIX Support, empresa do Fundo Moonlight que oferece suporte na nuvem. Já foi gerente na Good Quality Alimentos e sargento do Exército Brasileiro no 1º GAAAe."><img src="/img/leandro.png" alt="Leandro Alves"></a>
+		    		<a class="tooltip-1" data-toggle="popover" data-placement="bottom" data-content="Na Concrete Solutions desde 2006, é gerente da área de suporte enquanto atua como CEO da FIX Support, empresa do Fundo Moonlight que oferece suporte na nuvem. Já foi gerente na Good Quality Alimentos e sargento do Exército Brasileiro no 1º GAAAe."><img src="/img/leandro.png" alt="Leandro Alves"></a>
 		    		<h3>Leandro Alves</h3>
 		    		<h6>gerente da área de suporte e <br>sócio-fundador da FIX</h6>
 		    	</li>
